--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     margin-right: auto;
     text-align: center;
     font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 table {
@@ -18,14 +19,22 @@ table {
 table,
 td {
     border: 6px solid black;
+    padding: 0;
 }
 
 td {
-    width: 8vw;
-    height: 15vh;
+    width: 130px;
+    height: 130px;
 }
 
 button {
     width: 100%;
-    height: 15vh;
+    height: 100%;
+}
+
+@media(device-width < 500px) {
+    td {
+        width: 100px;
+        height: 100px;
+    }
 }
