--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     margin: 23vh auto;
 }
 
@@ -7,6 +7,7 @@
     margin-right: auto;
     text-align: center;
     font-size: 40px;
+    font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 }
 
