--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .main {
-    margin: 23vh auto;
+    margin: 12vh auto;
+    display: flex;
+    flex-direction: column;
 }
 
 #winner {
@@ -31,6 +33,14 @@ td {
 button {
     width: 100%;
     height: 100%;
+}
+
+#reset {
+    width: 10%;
+    height: 30px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media(device-width < 500px) {
