--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+* {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
 #h1 {
     color: #d41099;
     text-align: center;
-    font-size: 50px;
+    font-size: 300%;
     margin-left: auto;
     margin-right: auto; 
     margin-top: 7%;
@@ -14,8 +18,9 @@
 }
 
 #h11 {
-    color: rgb(18, 14, 15);
-    font-size: 45px;
+    color: black;
+    font-size: 250%;
+    margin-left: 1vw;
 }
 
 .mainn {
@@ -40,12 +45,11 @@
 }
 
 .main {
-    margin: auto;
     display: flex;
     flex-direction: column;
     position: absolute;
     top: 0;
-    left: 35vw;
+    left: 36.5vw;
     margin-top: 13%;
 }
 
@@ -54,7 +58,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-size: 40px;
+    font-size: 250%;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -65,6 +69,7 @@
 
 #text {
     text-align: center;
+    max-height: 6vh;
 }
 
 table {
@@ -89,14 +94,20 @@ button {
     height: 100%;
 }
 
+.star {
+    color: rgb(235, 202, 11);
+    margin: 4px;
+}
+
 #reset {
     width: 20%;
     height: 65px;
-    margin-bottom: 50px;
-    margin-left: 10px;
-    font-size: 25px;
+    margin-top: 12vh;
+    margin-left: 8vw;
+    font-size: 200%;
     background-color: #e352b7;
     color: #FFFFFF;
+    border-radius: 10px;
 }
 
 @media(device-width < 500px) {
